<resources>
    <string name="app_name">邻里</string>
    <string name="addNewShoppingAddress_contacts_str">联  系  人</string>
    <string name="addNewShoppingAddress_contacts_hint_str">收货人姓名</string>
    <string name="addNewShoppingAddress_mr_str">   先生</string>
    <string name="addNewShoppingAddress_ms_str">   女士</string>
    <string name="addNewShoppingAddress_phone_str">手机号码</string>
    <string name="addNewShoppingAddress_phone_hint_str">联系您的电话</string>
    <string name="addNewShoppingAddress_city_str">所在城市</string>
    <string name="addNewShoppingAddress_city_hint_str">请选择城市</string>
    <string name="com_shippingAddress_str">收货地址</string>
    <string name="addNewShoppingAddress_shippingAddress_hint_str">请选择您的住宅小区、大厦或学校</string>
    <string name="addNewShoppingAddress_houseNumber_str">门  牌  号</string>
    <string name="addNewShoppingAddress_houseNumber_hint_str">请输入楼号门牌号等详细信息</string>
    <string name="addNewShoppingAddress_deleteAddress_str">删除当前地址</string>
    <string name="title_new_address">NewAddress</string>
    <string name="address_management">管理收货地址</string>
    <string name="add_new_receiving_address">新增地址</string>
    <string name="com_save_str">保存</string>
    <string name="title_activity_add_address">AddAddressActivity</string>
    <string name="title_activity_scanner">ScannerActivity</string>

    <string name="scan_barcode">Scan Barcode</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="scanner_with_margin">Scanner with Margin</string>
    <string name="scanner_with_timeout">Finish Scan in 8 Seconds</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="title_activity_tabbed_scanning">Tabbed Scanning</string>
    <string name="tabs">Tabs</string>
</resources>
